# ENGINE

./: .Makefile.kate-swp  .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  HELLO!  LICENSE  Makefile  README.md  build-WIFI.md  cmake_install.cmake  make-macosx-app.sh  make_copy.txt
.github/workflows/: build.yml
code/asm/: CMakeLists.txt
code/botlib/: CMakeLists.txt  be_aas_main.c  be_ai_goal.c  be_ai_weap.c  be_ai_weight.c  be_interface.c  be_interface.h  botlib.h
code/cgame/: CMakeLists.txt
code/client/: CMakeLists.txt  cl_cgame.c  cl_cin.c  cl_console.c  cl_main.c  cl_net_chan.c  cl_scrn.c  snd_dma.c
code/game/: CMakeLists.txt  bg_public.h
code/libcurl/windows/include/curl/: CMakeLists.txt
code/libjpeg/: CMakeLists.txt
code/libogg/include/ogg/: CMakeLists.txt
code/libogg/src/: CMakeLists.txt
code/libsdl/include/SDL2/: CMakeLists.txt
code/libvorbis/include/vorbis/: CMakeLists.txt
code/libvorbis/lib/: CMakeLists.txt
code/libvorbis/lib/books/coupled/: CMakeLists.txt
code/libvorbis/lib/books/floor/: CMakeLists.txt
code/libvorbis/lib/books/uncoupled/: CMakeLists.txt
code/libvorbis/lib/modes/: CMakeLists.txt
code/qcommon/: CMakeLists.txt  cm_load.c  cm_local.h  cm_public.h  cm_test.c  cm_trace.c  common.c  cvar.c  files.c  msg.c  q_ac.c  q_shared.h  qcommon.h  vm.c  vm_local.h
code/renderer/: CMakeLists.txt  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_model.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_world.c
code/renderer2/: CMakeLists.txt  NOTE  tr_image.c  tr_init.c  tr_local.h  tr_shade.c  tr_shader.c
code/renderercommon/: CMakeLists.txt  tr_public.h  tr_types.h
code/renderercommon/vulkan/: CMakeLists.txt
code/renderervk/: CMakeLists.txt  tr_init.c  tr_local.h  vk.c
code/renderervk/shaders/: CMakeLists.txt
code/renderervk/shaders/spirv/: CMakeLists.txt  data.spv
code/sdl/: CMakeLists.txt  sdl_glimp.c  sdl_input.c
code/server/: CMakeLists.txt  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_net_chan.c  sv_world.c
code/ui/: CMakeLists.txt
code/unix/: CMakeLists.txt  quake3_flat.icns  unix_shared.c
code/win32/: CMakeLists.txt  readme  win_input.c
docs/: README  quake3e-changes.txt  quake3e.htm  quake3e.md
docs/engine/: README
docs/q3e/: quake3e-changes.txt  quake3e.htm
