cmake_minimum_required(VERSION 3.10)
project(GeneratedProject)
set(ARCH "$(COMPILE_ARCH)")
set(Q3REND2STROBJ "\")
set(CMDIR "$(MOUNT_DIR)/qcommon")
set(BLIBDIR "$(MOUNT_DIR)/botlib")
set(VERSION "1.32e")
set(SDLHDIR "$(MOUNT_DIR)/libsdl/include/SDL2")
set(INSTALL "install")
set(OGGOBJ "\")
set(SDIR "$(MOUNT_DIR)/server")
set(UDIR "$(MOUNT_DIR)/unix")
set(VORBISOBJ "\")
set(W32DIR "$(MOUNT_DIR)/win32")
set(PLATFORM "$(COMPILE_PLATFORM)")
set(VORBISDIR "$(MOUNT_DIR)/libvorbis")
set(R1DIR "$(MOUNT_DIR)/renderer")
set(Q3RENDVOBJ "\")
set(CDIR "$(MOUNT_DIR)/client")
set(BD "$(BUILD_DIR)/debug-$(PLATFORM)-$(ARCH)")
set(Q3REND1OBJ "\")
set(Q3REND2OBJ "\")
set(CNAME "engine")
set(BR "$(BUILD_DIR)/release-$(PLATFORM)-$(ARCH)")
set(JPDIR "$(MOUNT_DIR)/libjpeg")
set(Q3DOBJ "\")
set(Q3OBJ "\")
set(JPGOBJ "\")
set(Q "@")
set(DESTDIR "/usr/local/games/quake3")
set(RVDIR "$(MOUNT_DIR)/renderervk")
set(R2DIR "$(MOUNT_DIR)/renderer2")
set(SDLDIR "$(MOUNT_DIR)/sdl")
set(MKDIR "mkdir -p")
set(OGGDIR "$(MOUNT_DIR)/libogg")
set(STRINGIFY "$(B)/rend2/stringify$(BINEXT)")
set(ADIR "$(MOUNT_DIR)/asm")
set(DNAME "engine.ded")
set(RCDIR "$(MOUNT_DIR)/renderercommon")
add_custom_target($(STRINGIFY) DEPENDS $(MOUNT_DIR)/renderer2/stringify.c)
add_library($(B)/rend2/% OBJECT $(B)/rend2/%.cpp)
add_custom_target($(B)/$(TARGET_CLIENT) DEPENDS $(Q3OBJ))
add_custom_target(distclean DEPENDS clean)
add_custom_target($(B)/$(TARGET_SERVER) DEPENDS $(Q3DOBJ))
add_custom_target(default DEPENDS release)
add_library($(B)/client/vorbis/% OBJECT $(B)/client/vorbis/%.cpp)
add_library($(B)/ded/% OBJECT $(B)/ded/%.cpp)
add_custom_target(all DEPENDS debug release)
add_library($(B)/client/jpeg/% OBJECT $(B)/client/jpeg/%.cpp)
add_custom_target($(B)/$(TARGET_REND2) DEPENDS $(Q3REND2OBJ) $(Q3REND2STROBJ))
add_library($(B)/rend1/% OBJECT $(B)/rend1/%.cpp)
add_library($(B)/rend2/glsl/% OBJECT $(B)/rend2/glsl/%.cpp)
add_library($(B)/client/ogg/% OBJECT $(B)/client/ogg/%.cpp)
add_custom_target(.PHONY DEPENDS all clean clean2 clean-debug clean-release copyfiles \)
add_custom_target(clean DEPENDS clean-debug clean-release)
add_custom_target(install DEPENDS release)
add_library($(B)/client/% OBJECT $(B)/client/%.cpp)
add_custom_target($(B)/$(TARGET_REND1) DEPENDS $(Q3REND1OBJ))
add_library($(B)/rendv/% OBJECT $(B)/rendv/%.cpp)
add_custom_target(targets DEPENDS makedirs tools)
add_custom_target($2 DEPENDS $1)
add_custom_target($(B)/rend2/glsl/%.c DEPENDS $(R2DIR)/glsl/%.glsl $(STRINGIFY))
add_custom_target($(B)/$(TARGET_RENDV) DEPENDS $(Q3RENDVOBJ))
